// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`canon battery v1 (strict) — snapshot lock canon:strict:damage 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "damage",
      ],
      "form": "damage",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "A",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
      "A",
      "E",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "A",
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 2,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Inward move",
      "normalized": "A → A → E",
      "polarity": "centripetal",
      "raw": "A → A → E",
      "ringDelta": -1,
      "ringFrom": 3,
      "ringTo": 2,
      "steps": 2,
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "to": "E",
      "voices": [
        "A",
        "A",
        "E",
      ],
    },
    "ui": {
      "label": "Inward move",
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A → A → E",
    },
    "voicePath": "A → A → E",
    "voicePathRaw": "A → A → E",
    "voices": [
      "A",
      "A",
      "E",
    ],
    "word": "damage",
  },
  "word": "damage",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:ekonomi 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "ekonomi",
      ],
      "form": "ekonomi",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "O",
        "O",
        "I",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "O",
    ],
    "path": [
      "E",
      "O",
      "O",
      "I",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": "O",
      "middle": [
        "E",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 4,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 1,
      "O": 2,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Inward move",
      "normalized": "E → O → O → I",
      "polarity": "centripetal",
      "raw": "E → O → O → I",
      "ringDelta": -1,
      "ringFrom": 2,
      "ringTo": 1,
      "steps": 3,
      "summary": "Moves centripetal from ring 2 to ring 1 (E → I).",
      "to": "I",
      "voices": [
        "E",
        "O",
        "O",
        "I",
      ],
    },
    "ui": {
      "label": "Inward move",
      "summary": "Moves centripetal from ring 2 to ring 1 (E → I).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → O → O → I",
    },
    "voicePath": "E → O → O → I",
    "voicePathRaw": "E → O → O → I",
    "voices": [
      "E",
      "O",
      "O",
      "I",
    ],
    "word": "ekonomi",
  },
  "word": "ekonomi",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:emër 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "emër",
      ],
      "form": "emër",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "Ë",
    ],
    "path": [
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Outward move",
      "normalized": "E → Ë",
      "polarity": "centrifugal",
      "raw": "E → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "to": "Ë",
      "voices": [
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → Ë",
    },
    "voicePath": "E → Ë",
    "voicePathRaw": "E → Ë",
    "voices": [
      "E",
      "Ë",
    ],
    "word": "emër",
  },
  "word": "emër",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:frikë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "frikë",
      ],
      "form": "frikë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "I",
      "Ë",
    ],
    "path": [
      "I",
      "Ë",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": null,
      "middle": [],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 1,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Outward move",
      "normalized": "I → Ë",
      "polarity": "centrifugal",
      "raw": "I → Ë",
      "ringDelta": 2,
      "ringFrom": 1,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 1 to ring 3 (I → Ë).",
      "to": "Ë",
      "voices": [
        "I",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 3 (I → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I → Ë",
    },
    "voicePath": "I → Ë",
    "voicePathRaw": "I → Ë",
    "voices": [
      "I",
      "Ë",
    ],
    "word": "frikë",
  },
  "word": "frikë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:frymë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "frymë",
      ],
      "form": "frymë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "Y",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "Y",
      "Ë",
    ],
    "path": [
      "Y",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 1,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "Y",
      "label": "Outward move",
      "normalized": "Y → Ë",
      "polarity": "centrifugal",
      "raw": "Y → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (Y → Ë).",
      "to": "Ë",
      "voices": [
        "Y",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (Y → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "Y → Ë",
    },
    "voicePath": "Y → Ë",
    "voicePathRaw": "Y → Ë",
    "voices": [
      "Y",
      "Ë",
    ],
    "word": "frymë",
  },
  "word": "frymë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:gjak 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "gjak",
      ],
      "form": "gjak",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [],
      "outer": [
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 1,
    "vector": {
      "A": 1,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Single voice (A)",
      "normalized": "A",
      "polarity": "orbital",
      "raw": "A",
      "ringDelta": 0,
      "ringFrom": 3,
      "ringTo": 3,
      "steps": 0,
      "summary": "Static on ring 3.",
      "to": "A",
      "voices": [
        "A",
      ],
    },
    "ui": {
      "label": "Single voice (A)",
      "summary": "Static on ring 3.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A",
    },
    "voicePath": "A",
    "voicePathRaw": "A",
    "voices": [
      "A",
    ],
    "word": "gjak",
  },
  "word": "gjak",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:gjallë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "gjallë",
      ],
      "form": "gjallë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "A",
      "Ë",
    ],
    "path": [
      "A",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [],
      "outer": [
        "A",
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 1,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Same-ring move",
      "normalized": "A → Ë",
      "polarity": "orbital",
      "raw": "A → Ë",
      "ringDelta": 0,
      "ringFrom": 3,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves orbital from ring 3 to ring 3 (A → Ë).",
      "to": "Ë",
      "voices": [
        "A",
        "Ë",
      ],
    },
    "ui": {
      "label": "Same-ring move",
      "summary": "Moves orbital from ring 3 to ring 3 (A → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A → Ë",
    },
    "voicePath": "A → Ë",
    "voicePathRaw": "A → Ë",
    "voices": [
      "A",
      "Ë",
    ],
    "word": "gjallë",
  },
  "word": "gjallë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:internet 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "internet",
      ],
      "form": "internet",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
        "E",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "E",
    ],
    "path": [
      "I",
      "E",
      "E",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": null,
      "middle": [
        "E",
        "E",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 0,
      "E": 2,
      "I": 1,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Outward move",
      "normalized": "I → E → E",
      "polarity": "centrifugal",
      "raw": "I → E → E",
      "ringDelta": 1,
      "ringFrom": 1,
      "ringTo": 2,
      "steps": 2,
      "summary": "Moves centrifugal from ring 1 to ring 2 (I → E).",
      "to": "E",
      "voices": [
        "I",
        "E",
        "E",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 2 (I → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I → E → E",
    },
    "voicePath": "I → E → E",
    "voicePathRaw": "I → E → E",
    "voices": [
      "I",
      "E",
      "E",
    ],
    "word": "internet",
  },
  "word": "internet",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:jetë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "jetë",
      ],
      "form": "jetë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "Ë",
    ],
    "path": [
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Outward move",
      "normalized": "E → Ë",
      "polarity": "centrifugal",
      "raw": "E → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "to": "Ë",
      "voices": [
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → Ë",
    },
    "voicePath": "E → Ë",
    "voicePathRaw": "E → Ë",
    "voices": [
      "E",
      "Ë",
    ],
    "word": "jetë",
  },
  "word": "jetë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:kompjuter 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "kompjuter",
      ],
      "form": "kompjuter",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "O",
        "U",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "O",
      "U",
    ],
    "path": [
      "O",
      "U",
      "E",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": "O",
      "middle": [
        "E",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 1,
      "U": 1,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "O",
      "label": "Outward move",
      "normalized": "O → U → E",
      "polarity": "centrifugal",
      "raw": "O → U → E",
      "ringDelta": 2,
      "ringFrom": 0,
      "ringTo": 2,
      "steps": 2,
      "summary": "Moves centrifugal from ring 0 to ring 2 (O → E).",
      "to": "E",
      "voices": [
        "O",
        "U",
        "E",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 0 to ring 2 (O → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "O → U → E",
    },
    "voicePath": "O → U → E",
    "voicePathRaw": "O → U → E",
    "voices": [
      "O",
      "U",
      "E",
    ],
    "word": "kompjuter",
  },
  "word": "kompjuter",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:kriptomonedhë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "kriptomonedhë",
      ],
      "form": "kriptomonedhë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
        "O",
        "O",
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "overall balanced",
      ],
      "score": 1,
    },
    "dominantVoices": [
      "O",
    ],
    "path": [
      "I",
      "O",
      "O",
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": "O",
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "low tension",
      ],
      "score": 0,
    },
    "totalVoices": 5,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 1,
      "O": 2,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Outward move",
      "normalized": "I → O → O → E → Ë",
      "polarity": "centrifugal",
      "raw": "I → O → O → E → Ë",
      "ringDelta": 2,
      "ringFrom": 1,
      "ringTo": 3,
      "steps": 4,
      "summary": "Moves centrifugal from ring 1 to ring 3 (I → Ë).",
      "to": "Ë",
      "voices": [
        "I",
        "O",
        "O",
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 3 (I → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I → O → O → E → Ë",
    },
    "voicePath": "I → O → O → E → Ë",
    "voicePathRaw": "I → O → O → E → Ë",
    "voices": [
      "I",
      "O",
      "O",
      "E",
      "Ë",
    ],
    "word": "kriptomonedhë",
  },
  "word": "kriptomonedhë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:kulturë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "kulturë",
      ],
      "form": "kulturë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
        "U",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "U",
    ],
    "path": [
      "U",
      "U",
      "Ë",
    ],
    "rings": {
      "inner": [
        "U",
        "U",
      ],
      "mediator": null,
      "middle": [],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 2,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "U",
      "label": "Outward move",
      "normalized": "U → U → Ë",
      "polarity": "centrifugal",
      "raw": "U → U → Ë",
      "ringDelta": 2,
      "ringFrom": 1,
      "ringTo": 3,
      "steps": 2,
      "summary": "Moves centrifugal from ring 1 to ring 3 (U → Ë).",
      "to": "Ë",
      "voices": [
        "U",
        "U",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 3 (U → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "U → U → Ë",
    },
    "voicePath": "U → U → Ë",
    "voicePathRaw": "U → U → Ë",
    "voices": [
      "U",
      "U",
      "Ë",
    ],
    "word": "kulturë",
  },
  "word": "kulturë",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:ligj 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "ligj",
      ],
      "form": "ligj",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "I",
    ],
    "path": [
      "I",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": null,
      "middle": [],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 1,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 1,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Single voice (I)",
      "normalized": "I",
      "polarity": "orbital",
      "raw": "I",
      "ringDelta": 0,
      "ringFrom": 1,
      "ringTo": 1,
      "steps": 0,
      "summary": "Static on ring 1.",
      "to": "I",
      "voices": [
        "I",
      ],
    },
    "ui": {
      "label": "Single voice (I)",
      "summary": "Static on ring 1.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I",
    },
    "voicePath": "I",
    "voicePathRaw": "I",
    "voices": [
      "I",
    ],
    "word": "ligj",
  },
  "word": "ligj",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:shoqëri 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "shoqëri",
      ],
      "form": "shoqëri",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "O",
        "Ë",
        "I",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "I",
      "O",
      "Ë",
    ],
    "path": [
      "O",
      "Ë",
      "I",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": "O",
      "middle": [],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 1,
      "O": 1,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "O",
      "label": "Outward move",
      "normalized": "O → Ë → I",
      "polarity": "centrifugal",
      "raw": "O → Ë → I",
      "ringDelta": 1,
      "ringFrom": 0,
      "ringTo": 1,
      "steps": 2,
      "summary": "Moves centrifugal from ring 0 to ring 1 (O → I).",
      "to": "I",
      "voices": [
        "O",
        "Ë",
        "I",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 0 to ring 1 (O → I).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "O → Ë → I",
    },
    "voicePath": "O → Ë → I",
    "voicePathRaw": "O → Ë → I",
    "voices": [
      "O",
      "Ë",
      "I",
    ],
    "word": "shoqëri",
  },
  "word": "shoqëri",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:shpirt 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "shpirt",
      ],
      "form": "shpirt",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "I",
    ],
    "path": [
      "I",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": null,
      "middle": [],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 1,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 1,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Single voice (I)",
      "normalized": "I",
      "polarity": "orbital",
      "raw": "I",
      "ringDelta": 0,
      "ringFrom": 1,
      "ringTo": 1,
      "steps": 0,
      "summary": "Static on ring 1.",
      "to": "I",
      "voices": [
        "I",
      ],
    },
    "ui": {
      "label": "Single voice (I)",
      "summary": "Static on ring 1.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I",
    },
    "voicePath": "I",
    "voicePathRaw": "I",
    "voices": [
      "I",
    ],
    "word": "shpirt",
  },
  "word": "shpirt",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:sistem 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "sistem",
      ],
      "form": "sistem",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "I",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "I",
    ],
    "path": [
      "I",
      "E",
    ],
    "rings": {
      "inner": [
        "I",
      ],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 1,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "I",
      "label": "Outward move",
      "normalized": "I → E",
      "polarity": "centrifugal",
      "raw": "I → E",
      "ringDelta": 1,
      "ringFrom": 1,
      "ringTo": 2,
      "steps": 1,
      "summary": "Moves centrifugal from ring 1 to ring 2 (I → E).",
      "to": "E",
      "voices": [
        "I",
        "E",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 2 (I → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "I → E",
    },
    "voicePath": "I → E",
    "voicePathRaw": "I → E",
    "voices": [
      "I",
      "E",
    ],
    "word": "sistem",
  },
  "word": "sistem",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:study 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "study",
      ],
      "form": "study",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
        "Y",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "U",
      "Y",
    ],
    "path": [
      "U",
      "Y",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 1,
      "Y": 1,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "U",
      "label": "Outward move",
      "normalized": "U → Y",
      "polarity": "centrifugal",
      "raw": "U → Y",
      "ringDelta": 1,
      "ringFrom": 1,
      "ringTo": 2,
      "steps": 1,
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "to": "Y",
      "voices": [
        "U",
        "Y",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "U → Y",
    },
    "voicePath": "U → Y",
    "voicePathRaw": "U → Y",
    "voices": [
      "U",
      "Y",
    ],
    "word": "study",
  },
  "word": "study",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:telefon 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "telefon",
      ],
      "form": "telefon",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "E",
        "O",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "E",
    ],
    "path": [
      "E",
      "E",
      "O",
    ],
    "rings": {
      "inner": [],
      "mediator": "O",
      "middle": [
        "E",
        "E",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 0,
      "E": 2,
      "I": 0,
      "O": 1,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Inward move",
      "normalized": "E → E → O",
      "polarity": "centripetal",
      "raw": "E → E → O",
      "ringDelta": -2,
      "ringFrom": 2,
      "ringTo": 0,
      "steps": 2,
      "summary": "Moves centripetal from ring 2 to ring 0 (E → O).",
      "to": "O",
      "voices": [
        "E",
        "E",
        "O",
      ],
    },
    "ui": {
      "label": "Inward move",
      "summary": "Moves centripetal from ring 2 to ring 0 (E → O).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → E → O",
    },
    "voicePath": "E → E → O",
    "voicePathRaw": "E → E → O",
    "voices": [
      "E",
      "E",
      "O",
    ],
    "word": "telefon",
  },
  "word": "telefon",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:trup 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "trup",
      ],
      "form": "trup",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "U",
    ],
    "path": [
      "U",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": null,
      "middle": [],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 1,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 1,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "U",
      "label": "Single voice (U)",
      "normalized": "U",
      "polarity": "orbital",
      "raw": "U",
      "ringDelta": 0,
      "ringFrom": 1,
      "ringTo": 1,
      "steps": 0,
      "summary": "Static on ring 1.",
      "to": "U",
      "voices": [
        "U",
      ],
    },
    "ui": {
      "label": "Single voice (U)",
      "summary": "Static on ring 1.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "U",
    },
    "voicePath": "U",
    "voicePathRaw": "U",
    "voices": [
      "U",
    ],
    "word": "trup",
  },
  "word": "trup",
}
`;

exports[`canon battery v1 (strict) — snapshot lock canon:strict:zemër 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "zemër",
      ],
      "form": "zemër",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "Ë",
    ],
    "path": [
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Outward move",
      "normalized": "E → Ë",
      "polarity": "centrifugal",
      "raw": "E → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "to": "Ë",
      "voices": [
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → Ë",
    },
    "voicePath": "E → Ë",
    "voicePathRaw": "E → Ë",
    "voices": [
      "E",
      "Ë",
    ],
    "word": "zemër",
  },
  "word": "zemër",
}
`;
